Finished web layout.

--- a/index.html
+++ b/index.html
@@ -1,19 +1,81 @@
 <html>
-  <head>
+<head>
+    <title>Image Classification with Tensorflow.js</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+    <style>
+    body,h1,h2,h3,h4,h5 {font-family: "Raleway", sans-serif}
+    </style>
     <!-- Load the latest version of TensorFlow.js -->
     <script src="https://unpkg.com/@tensorflow/tfjs"></script>
     <script src="https://unpkg.com/@tensorflow-models/mobilenet"></script>
     <script src="https://unpkg.com/@tensorflow-models/knn-classifier"></script>
-  </head>
-  <body>
-    <div id="console"></div>
-    <!-- Add an image that we will use to test -->
-    <video autoplay playsinline muted id="webcam" width="224" height="224"></video>
-    <button id="class-a">Happy</button>
-    <button id="class-b">Sad</button>
-    <button id="class-c">Angry</button>
-    <button id="class-d">Serious</button>
-    <!-- Load index.js after the content of the page -->
-    <script src="index.js"></script>
-  </body>
-</html>
+</head>
+<body>
+    <div class="w3-content" style="max-width:1400px">
+        <header class="w3-container w3-center w3-padding-32">
+            <h1><b>Image Classification using Tensorflow.js</b></h1>
+            <p>Made by <span class="w3-tag">Cristian Lopez</span></p>
+        </header>
+        <div class="w3-col l8 s12">
+            <div class="w3-card-4 w3-margin w3-white">
+                <!-- Add an image that we will use to test -->
+                <div style="width:100%; background-color: grey; margin-bottom: 2em;">
+                    <video autoplay playsinline muted id="webcam" width="224" height="224" style="display: inherit; margin: auto;"></video>
+                </div>
+                <div>
+                    <div class="w3-container" style="float: left; width=50%;">
+                        <h3><b>How are you feeling?</b></h3>
+                        <h5>Select the feeling you are showing <span class="w3-opacity">(do not lie!)</span></h5>
+                        <button id="class-a">Happy</button>
+                        <button id="class-b">Sad</button>
+                        <button id="class-c">Angry</button>
+                        <button id="class-d">Serious</button>
+                    </div>
+                    <div id="console" style="float: right; text-align: center; width: 50%;"></div>
+                </div>
+            </div>
+        </div>
+
+        <div class="w3-col l4">
+            <!-- About Card -->
+            <div class="w3-card w3-margin w3-margin-top">
+                <img src="/w3images/avatar_g.jpg" style="width:100%">
+                <div class="w3-container w3-white">
+                    <h4><b>Tensorflow.js</b></h4>
+                    <p>Tensorflow.js is a Javascript implementation of the popular Tensorflow library used for many Machine Learning applications. It enables us to use off-the-shelf JavaScript models or convert Python TensorFlow models. Moreover, we can retrain models for our data, which is what I have done in this project.</p>
+                </div>
+            </div><hr>
+
+            <!-- Posts -->
+            <div class="w3-card w3-margin">
+                <div class="w3-container w3-padding">
+                    <h4><b>My social media</b></h4>
+                    <h9><i>Automating the obvious to focus on what matters.</i></h9>
+                </div>
+                <ul class="w3-ul w3-hoverable w3-white">
+                    <li class="w3-padding-16">
+                        <a href="https://github.com/cristianlopezcano" style="text-decoration: none;">
+                            <span class="w3-large">GitHub</span><br>
+                            <span>https://github.com/cristianlopezcano</span>
+                        </a>
+                    </li>
+                    <li class="w3-padding-16">
+                        <a href="https://www.linkedin.com/in/cristian-lopez-cano/" style="text-decoration: none;">
+                            <span class="w3-large">LinkedIn</span><br>
+                            <span>https://www.linkedin.com/in/cristian-lopez-cano/</span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+            <hr>
+
+
+            <!-- Load index.js after the content of the page -->
+            <script src="index.js"></script>
+        </div>
+    </body>
+    </html>
+    </html>
