Added explanation to webpage.

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div>
                     <div class="w3-container" style="float: left; width=50%;">
                         <h3><b>How are you feeling?</b></h3>
-                        <h5>Select the feeling you are showing <span class="w3-opacity">(do not lie!)</span></h5>
+                        <h5>Display various emotions and let the model know how you are feeling. Then see how it starts predicting your mood in real time!<span class="w3-opacity"> (accuracy not guaranteed!)</span></h5>
                         <button id="class-a">Happy</button>
                         <button id="class-b">Sad</button>
                         <button id="class-c">Angry</button>
