--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
     <div class="w3-content" style="max-width:1400px">
         <header class="w3-container w3-center w3-padding-32">
             <h1><b>Image Classification using Tensorflow.js</b></h1>
-            <p>Made by <span class="w3-tag">Cristian Lopez</span></p>
         </header>
         <div class="w3-col l8 s12">
             <div class="w3-card-4 w3-margin w3-white">
@@ -52,13 +51,12 @@
             <div class="w3-card w3-margin">
                 <div class="w3-container w3-padding">
                     <h4><b>My social media</b></h4>
-                    <h9><i>Automating the obvious to focus on what matters.</i></h9>
                 </div>
                 <ul class="w3-ul w3-hoverable w3-white">
                     <li class="w3-padding-16">
-                        <a href="https://github.com/cristianlopezcano" style="text-decoration: none;">
+                        <a href="https://github.com/vintrae" style="text-decoration: none;">
                             <span class="w3-large">GitHub</span><br>
-                            <span>https://github.com/cristianlopezcano</span>
+                            <span>https://github.com/vintrae</span>
                         </a>
                     </li>
                     <li class="w3-padding-16">
